# waasabi-matrix

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  bot-config.example.toml  deny.toml  index.html
.github/workflows/: deploy.yml  tests.yml
docs/: release.md
examples/: backend.rs
scripts/: prepare-release.sh
src/: config.rs  main.rs  matrix.rs  strapi.rs
src/api/: mod.rs
src/bot/: backend.rs  messages.rs  mod.rs
src/dispatcher/: global.rs  mod.rs
