[package]
name = "ferris-bot"
description = "Your friendly Ferris in a Matrix server near you"
version = "0.1.0"
authors = ["Jan-Erik Rediger <janerik@fnordig.de>"]
edition = "2018"

[dependencies]
ruma-client = { git = "https://github.com/ruma/ruma/", branch = "main" }
ruma = { git = "https://github.com/ruma/ruma/", branch = "main", features = ["client-api"] }

tokio = { version = "0.2.0", features = ["full"] }
futures-util = "0.3.6"
assign = "1.1.0"
anyhow = "1.0.33"
url = "2.1.1"
http = "0.2.1"
hyper = "0.13.8"
hyper-tls = "0.4.3"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
log = "0.4.11"
env_logger = "0.8.1"
